--- a/CitizenIdentification/CitizenIdentification/Views/Home/CitizenID.cshtml
+++ b/CitizenIdentification/CitizenIdentification/Views/Home/CitizenID.cshtml
@@ -1,30 +1,28 @@
 ﻿@model CitizenIdentification.Models.CitizenIDViewModel
 
 @{
-    ViewData["Title"] = "Citizen Identification";
+    Layout = "_PrintLayout";
 }
-
-<div class="print">
-    <table class="table">
-        <tr>
-            <td>
-                <img src="@Model.QRCode" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => Model.Name)
-            </td>
-        </tr>
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => Model.Age)
-            </td>
-        </tr>
-    </table>
+<div class="row" style="border: 2px solid black; width: 204px; height: 324px;font-family: 'Franklin Gothic Medium', 'Arial Narrow', 'Arial, sans-serif';">
+    <div class="col-p-12 col-sm-12">
+        <div style="text-align: center;">
+            <img src="~/lib/geo/imgs/hks.png" style="width:150px; height:50px" />
+            <strong style="color: blue">Citizen's Identification Card</strong>
+            <img src="@Model.QRCode" style="width:90px; height:90px;" />
+            <br />
+            <strong>@Html.DisplayFor(modelItem => Model.Name), @Html.DisplayFor(modelItem => Model.Age)</strong>
+            <p class="muted">@Html.DisplayFor(modelItem => Model.Address)</p>
+            <strong style="font-size:small">COVID-19</strong>
+            <br />
+            <strong style="color:yellowgreen;">VACCINATED</strong>
+            <div style="text-align:left; padding-left: 5px; padding-right:5px;">
+                <strong style="color: GrayText">1st Dose</strong>
+                <strong style="float:right">@Html.DisplayFor(modelItem => Model.VaccinationDate1)</strong>
+            </div>
+            <div style="text-align: left; padding-left: 5px; padding-right: 5px;">
+                <strong style="color: GrayText">2nd Dose</strong>
+                <strong style="float:right">@Html.DisplayFor(modelItem => Model.VaccinationDate2)</strong>
+            </div>
+        </div>
+    </div>
 </div>
-
-
-@section Scripts{
-    <link rel="stylesheet" media="print" href="~/css/print.css" />
-}
